fix table spacing

--- a/src/css/imports/_reset.css
+++ b/src/css/imports/_reset.css
@@ -23,6 +23,10 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+/* fix table spacing */
+td {
+	padding-right: 10px;
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
